recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:5: error: value | is not a member of Unit
    return(tree(steps-1,length*shrink,2*angle,shrink)|tree(steps-1,length*shrink,-angle,shrink))
                                                     ^Tree:5: warning: enclosing method tree has result type Unit: return value discarded
    return(tree(steps-1,length*shrink,2*angle,shrink)|tree(steps-1,length*shrink,-angle,shrink))
    ^